fix text wrap for introduction

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -40,6 +40,7 @@ body {
 
 .introduction > p {
     padding: 1rem 2rem;
+    max-width: 60rem;
 }
 
 .button {
